# earthquake-prediction

./: .gitignore  EarthQuake_UniVariate_TimeSeries.ipynb  Model Building.ipynb  Official Website of National Center of Seismology.xlsx  README.md  __init__.py  data_pipline.py  earthquake-prediction.html  earthquake_best_model.pth  main#3.py  main.py  main3.py  main_new.py  main_old.py  map_viz.html  model.py  pyproject.toml  requirements.txt  requirments.txt  requirments.txt.txt  test.ipynb  test.py  trainin_pipline.py
.ipynb_checkpoints/: EDA Earthquakes-checkpoint.ipynb  Model Building-checkpoint.ipynb
data/: query.csv
data/engineered_data/: New_Engineered_Data.csv
model/: models.json
notebook/: MissingData_test.py  Veovideotest.py  afterbasicEDA.ipynb  data_eng_test.py  earthquake_best_model.pth  eda.ipynb  models.ipynb  new_eda.ipynb  stocktrading.ipynb
src/: __init__.py
src/helpers/: __init__.py  datapi.py  sql_data_handler.py  utils.py
src/model/: __init__.py  decision_tree_scratch.py  dtr_upd.py  knn_scratch.py  lr_scratch.py  model.py
src/prediction/: __init__.py  inference.py
src/preprocessing/: __init__.py  data_imputation_model.py  data_preprocessing.py  feature_eng.py
src/training/: __init__.py  best_parameters_RF.txt  best_parameters_XGB.txt  training_nn.py  training_og.py
test/: Dtreg.py  basefull_test.py  data_fetch_alt.py  tests.py
